test/test-suits/errors/test-14-il_typed_process_context/input.dhl
a($p:string) :- $q = $p + 1 | b($q)
